--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Students List</h1>
+{% if students is defined and students|length>0 %}
+    <table id="all-students" border>
+        <tr>
+            <th>SNo</th>
+            <th>Roll Number</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Actions</th>
+        </tr>
+        {% for student in students %}
+            <tr>
+                <td>{{ student.student_id }}</td>
+                <td><a href="/student/<int:student_id>">{{ student.roll_number }}</a></td>
+                <td>{{ student.first_name }}</td>
+                <td>{{ student.last_name }}</td>
+                <td>
+                    <a href="/student/{{ student.student_id }}/update" type="button">Update</a>
+                    <a href="/student//{{ student.student_id }}/delete" type="button">Delete</a>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+{% else %}
+    <p>No students found. Add the student now?</p>
+{% endif %}
+<a href="/student/create">+ Add Student</a>
 </body>
 </html>
