--- a/templates/duplicate_rollnumber.html
+++ b/templates/duplicate_rollnumber.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
-
+<p>Student already exists. Please use a different Roll Number.</p>
+<div><a href="/">Go Home</a> </div>
 </body>
 </html>
