--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <td>{{ student.last_name }}</td>
                 <td>
                     <a href="/student/{{ student.student_id }}/update" type="button">Update</a>
-                    <a href="/student//{{ student.student_id }}/delete" type="button">Delete</a>
+                    <a href="/student/{{ student.student_id }}/delete" type="button">Delete</a>
                 </td>
             </tr>
         {% endfor %}
