--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         {% for student in students %}
             <tr>
                 <td>{{ student.student_id }}</td>
-                <td><a href="/student/<int:student_id>">{{ student.roll_number }}</a></td>
+                <td><a href="/student/{{ student.student_id }}">{{ student.roll_number }}</a></td>
                 <td>{{ student.first_name }}</td>
                 <td>{{ student.last_name }}</td>
                 <td>
